# bottrade

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
docs/: BADGES.md  BOTTRADE_SKILL.md  MCP_CLIENTS.md  RESULT_FIXTURES.md
examples/ai-hedge-fund/: README.md  adapter.py
examples/langchain-langgraph/: README.md  run_agent.py
examples/multi-provider/: README.md  run_agent.py
examples/openai-agents/: README.md  run_agent.py
examples/plain-python/: README.md  run_strategy.py
fixtures/runs/: ai-hedge-fund-technical-tech-2024-q2.json  claude-opus-4-8-tech-2024-q2.json
scripts/: check_ai_hedge_fund_contract.py  fetch_public_run.py
src/bottrade/: __init__.py  __main__.py  agents.py  cli.py  client.py  errors.py  models.py  session.py  strategies.py  workflows.py
tests/: test_ai_hedge_fund_adapter.py  test_cli.py  test_client.py  test_examples.py  test_models.py  test_workflows.py
