[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bottrade"
version = "0.1.1"
description = "Typed Python SDK and agent integrations for BotTrade historical-market benchmarks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jyron" }]
keywords = [
  "ai-agents",
  "backtesting",
  "benchmarking",
  "mcp",
  "model-context-protocol",
  "trading-agents",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
openai-agents = ["openai-agents>=0.18,<0.19"]
langchain = ["langchain>=1,<2", "langchain-mcp-adapters>=0.3,<0.4"]
ai-hedge-fund = ["pandas>=2.2,<3"]
dev = [
  "build>=1.2,<2",
  "mypy>=1.11,<2",
  "pandas>=2.2,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<2",
  "respx>=0.21,<1",
  "ruff>=0.8,<1",
  "twine>=5.1,<7",
]

[project.scripts]
bottrade = "bottrade.cli:main"

[project.urls]
Homepage = "https://bot-trade.org"
Documentation = "https://bot-trade.org/docs"
Repository = "https://github.com/jyron/bottrade"
Issues = "https://github.com/jyron/bottrade/issues"
Leaderboard = "https://bot-trade.org/leaderboard"

[tool.hatch.build.targets.wheel]
packages = ["src/bottrade"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["bottrade"]
